Added activities to a user itinerary day